# ChangeLog for dev-java/jdbc-mysql
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-java/jdbc-mysql/ChangeLog,v 1.79 2011/12/25 20:27:28 fordfrog Exp $

  25 Dec 2011; Miroslav Šulc <fordfrog@gentoo.org> -jdbc-mysql-5.1.11.ebuild,
  jdbc-mysql-5.1.14.ebuild:
  Restricted compilation to JDK 1.6 because of JDBC incompatibility with JDK
  1.7 (bug #395321). Also removed old version.

  24 Mar 2011; Kacper Kowalik <xarthisius@gentoo.org> jdbc-mysql-5.1.14.ebuild:
  ppc/ppc64 stable wrt #356803

  21 Mar 2011; Thomas Kahle <tomka@gentoo.org> jdbc-mysql-5.1.14.ebuild:
  x86 stable per bug 356803

  28 Feb 2011; Markos Chandras <hwoarang@gentoo.org> jdbc-mysql-5.1.14.ebuild:
  Stable on amd64 wrt bug #356803

*jdbc-mysql-5.1.14 (28 Jan 2011)

  28 Jan 2011; Miroslav Šulc <fordfrog@gentoo.org> +files/5.1.14-java6.patch,
  +jdbc-mysql-5.1.14.ebuild:
  Version bump

  17 Oct 2010; Vlastimil Babka <caster@gentoo.org> -jdbc-mysql-5.1.6.ebuild:
  Remove old.

  14 Oct 2010; Brent Baude <ranger@gentoo.org> jdbc-mysql-5.1.11.ebuild:
  stable ppc, bug 309109

  30 Jun 2010; Vlastimil Babka <caster@gentoo.org> -jdbc-mysql-5.0.8.ebuild,
  jdbc-mysql-5.1.6.ebuild, -jdbc-mysql-5.1.10.ebuild,
  -files/do-not-filter-png.diff:
  Cleanup.

  16 May 2010; Markus Meier <maekke@gentoo.org> jdbc-mysql-5.1.11.ebuild:
  amd64/x86 stable, bug #309109

  11 May 2010; Brent Baude <ranger@gentoo.org> jdbc-mysql-5.1.11.ebuild:
  stable ppc64, bug 309109

*jdbc-mysql-5.1.11 (12 Feb 2010)

  12 Feb 2010; Vlastimil Babka <caster@gentoo.org>
  +files/5.1.11-java6.patch, +jdbc-mysql-5.1.11.ebuild:
  Version bump. Remove dependency on 1.5 JDK using bootclasspath magic,
  fixes bug #283848.

  12 Feb 2010; Vlastimil Babka <caster@gentoo.org>
  -files/5.1.6-java6-detection.patch, jdbc-mysql-5.1.10.ebuild:
  Do the same with 5.1.10, might help bug #292876 as well.

  12 Feb 2010; Vlastimil Babka <caster@gentoo.org> jdbc-mysql-5.1.6.ebuild: