@@ -3,6 +3,8 @@ AUX 5.0.5-remove-jboss-dependency-from-tests.patch 1541 RMD160 4e611f9b47fb4f1b9
 AUX 5.1.11-java6.patch 1188 RMD160 15fedbb3e7737a3a7b0da8ffd90cec88cc908a16 SHA1 f698393ea828c57b0e906b7e8f86decbf836d7fe SHA256 69f6d028a489d5dda58286aa4488a24827f998300a04a8126fe78ec7ae163ada
 AUX 5.1.14-java6.patch 1301 RMD160 75a88ccd44f534bf7f945da714f4a2e4fc9b1f14 SHA1 07f24ea31d049bff73d511b63002e1bb05de07fa SHA256 ec8a6063e3bd9c6e37dc5be646b47dfe86c0bc819411d280b19645951f7b3376
 DIST mysql-connector-java-5.1.14.tar.gz 3272153 RMD160 d0e39c7513868de82d0bc1d31324356900bf9583 SHA1 dce1a36d81996890e6e5551b459189c585335e2f SHA256 ca6f873a4da59cfe1f464ccee29672dc3bc56ef79cc6a1e9aefba2449c7a32d0
+DIST mysql-connector-java-5.1.18.tar.gz 3834947 RMD160 01e604852168fdde7ef0d0ce11b9e32a039f9590 SHA1 ff2843e6ff749d9f26a9adadf56e7618028c8ba5 SHA256 e67216a40fba486dbba9d93fca8e2d5bd6e434edb08f4b47b07e08f27555f414
 EBUILD jdbc-mysql-5.1.14.ebuild 2078 RMD160 3ffa77ad838820f8f9634ad12d233acd77189d89 SHA1 d3d0c64b86dda20707602ac90f1511dff38c6836 SHA256 9de6dbbbcba474218839d6ee9b019d7347f65a3cb0d04f9909a8e988633cdb91
-MISC ChangeLog 14610 RMD160 b82750194635b1799b27e01de12e4347f5298b4a SHA1 d812d55e15da60082a33aa63e18c639ea1ad21ef SHA256 5076c23f5a2f92e2f8a30dfbff996289dae6a97c163a509bdb20c7193b87c4a3
+EBUILD jdbc-mysql-5.1.18.ebuild 2072 RMD160 165b81434ef593a409e5c89ae853845fd0d44d5a SHA1 e7381cd4a98224bade082f259d61e2af5566644f SHA256 b4234ade1ed6a3e06d68e170eb68efab1945902defdf5d38fd155b6056ff5d5e
+MISC ChangeLog 14739 RMD160 d8e4788a4b45c4a7ca7e2d76b374e6d2473e916d SHA1 b4600214878a954563711be788c83e6d497c4798 SHA256 e7ffe1f9028394a1dd20fa8c43a1f409871c27fea774be07d347a621f34fccbd
 MISC metadata.xml 275 RMD160 5f7d304e228469061c6cf78501f5dc993a3f8a06 SHA1 9ac7f996334ebfc5a6c4acfbaae8b3b28e69618e SHA256 66f7ef9181218b25bd6152f27a5e0e6699cfad8967bbf535da17c0caff9591d4
