@@ -1,6 +1,11 @@
 # ChangeLog for dev-java/jdbc-mysql
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-java/jdbc-mysql/ChangeLog,v 1.79 2011/12/25 20:27:28 fordfrog Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-java/jdbc-mysql/ChangeLog,v 1.80 2011/12/25 20:46:35 fordfrog Exp $
+
+*jdbc-mysql-5.1.18 (25 Dec 2011)
+
+  25 Dec 2011; Miroslav Šulc <fordfrog@gentoo.org> +jdbc-mysql-5.1.18.ebuild:
+  Version bump
 
   25 Dec 2011; Miroslav Šulc <fordfrog@gentoo.org> -jdbc-mysql-5.1.11.ebuild,
   jdbc-mysql-5.1.14.ebuild:
